--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,10 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+CONFIG_ZMK_KEYBOARD_NAME="Dindas Corne"
